--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "google-maps-react": "^2.0.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-dragula": "^1.1.17",
+    "react-geocode": "^0.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
